--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/datepicker/datepicker.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/datepicker/datepicker.xhtml
@@ -22,6 +22,7 @@
 					<div id="side-menu" class="cf"></div>
 					<div id="content" class="cf">
 						<h1>DatePicker</h1>
+						<h3>See also: <a href="../customdatepicker/customdatepicker.xhtml">Colored DatePicker, Fiscal months, Jump buttons</a></h3>
 						<h2>Overview</h2>
 						<h3>Datepicker</h3>
 						<div data-bind="ntsDatePicker: { name: '#[FND_L_SEARCH_RELEASE]', value: dateString, dateFormat: 'YYYY/MM/DD', required: true, acceptJapaneseCalendar: true}"></div>
@@ -40,6 +41,8 @@
 						<span data-bind="ntsCheckBox: {checked: enable}">Enable</span>
 						<br/>
 						<b>Return Number:</b> <span data-bind="text: yearMonth"/>
+						<br/>
+						<br/>
 						<article class="cf">
 							<div class="tabs">
 								<ol>
