combobox supports validate required

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/combobox/combobox.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/combobox/combobox.xhtml
@@ -24,38 +24,31 @@
 					<div id="content" class="cf">
 						<h1>ComboBox</h1>
 						<h2>Overview</h2>
+						<div class="status">
+							<span data-bind="ntsCheckBox: { checked: isEnable }">Enable</span>
+							<span data-bind="ntsCheckBox: { checked: isEditable }">Editable</span>
+							<span data-bind="ntsCheckBox: { checked: isRequired }">isRequired</span>
+						</div>
 						<div class="control-group valign-center">
-							<div id="combo-box" tabindex="1" data-bind="ntsComboBox: {options: itemList,
+							<div id="combo-box" tabindex="1" data-bind="ntsComboBox: {
+												name: 'Sample List',
+												options: itemList,
 												optionsValue: 'code',
 												visibleItemsCount: 5,
 												value: selectedCode,
 												optionsText: 'name',
 												editable: isEditable,
 												enable: isEnable,
+												required: isRequired,
 												columns: [
 														{ prop: 'code', length: 4 },
 														{ prop: 'name', length: 10 },
 													]}"></div>
-													<div id="combo-box2" tabindex="2" data-bind="ntsComboBox: {options: itemList,
-												optionsValue: 'code',
-												visibleItemsCount: 5,
-												value: selectedCode,
-												optionsText: 'name',
-												editable: isEditable,
-												enable: isEnable,
-												dropDownAttachedToBody: true,
-												columns: [
-														{ prop: 'code', length: 4 },
-														{ prop: 'name', length: 10 },
-													]}
-												"></div>
-						</div>
-						<div class="status">
-							<span data-bind="ntsCheckBox: { checked: isEnable }">Enable</span>
-							<span tabindex="4" data-bind="ntsCheckBox: { checked: isEditable }">Editable</span>
-						</div>
-						<div>
-							Your selected code: <span data-bind="text:selectedCode"></span>
+
+							<div>
+								Your selected code: <input type="text" data-bind="value:selectedCode" style="width: 50px;"/>
+								<button data-bind="click: validate">validate</button>
+							</div>
 						</div>
 						
 						<h2>Expand width when dropped down</h2>
@@ -67,6 +60,7 @@
  												optionsText: 'name',
  												editable: isEditable,
  												enable: isEnable,
+												required: isRequired,
  												columns: [
  														{ prop: 'code', length: 4 },
  														{ prop: 'name', length: 10, lengthDropDown: 20 },
@@ -86,6 +80,7 @@
 	<com:scriptfile set="IGNITE" />
 </ui:define>]]></pre>
 <pre><![CDATA[<div id="combo-box" data-bind="ntsComboBox: {
+	name: 'Sample List',
 	options: itemListCbb1,
 	optionsValue: 'code',
 	visibleItemsCount: 5,
@@ -93,6 +88,7 @@
 	optionsText: 'name',
 	editable: isEditable,
 	enable: isEnable,
+	required: isRequired,
 	columns: [
 		{ prop: 'code', length: 4 },
 		{ prop: 'name', length: 10 },
@@ -188,7 +184,7 @@ class ItemModel {
 												</td>
 											</tr>
 											<tr>
-												<td>editable</td>
+												<td>editable<i>(optional)</i></td>
 												<td>
 													<b>Type:</b> boolean<br/>
 													<b>Default:</b> false<br/>
@@ -197,11 +193,19 @@ class ItemModel {
 												</td>
 											</tr>											
 											<tr>
-												<td>enable</td>
+												<td>enable<i>(optional)</i></td>
 												<td>
 													<b>Type:</b> boolean<br/>
 													<b>Default:</b> true<br/>
-													Set enable/disable for MultiCheckBox control
+													Set enable/disable.
+												</td>
+											</tr>											
+											<tr>
+												<td>required<i>(optional)</i></td>
+												<td>
+													<b>Type:</b> boolean<br/>
+													<b>Default:</b> false<br/>
+													Set required or not.
 												</td>
 											</tr>
 											<tr>
