--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_combobox.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/components/_combobox.scss
@@ -5,6 +5,16 @@
 		color: $font_color;
 	}
 }
+
+.ui-igcombo-wrapper {
+	
+	&.error {
+		> .ui-igcombo {
+			border-color: #ff6666;
+		}
+	}
+}
+
 .nts-combo-item {
   	height: 20px;
   	font-size: 0px;
