move gridlist to shr and rename
add new validation for layout list

--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/003/a/index.xhtml
@@ -16,7 +16,8 @@
 				of="/nts.uk.com.web" />
 			<com:scriptfile path="/view/ccg/share/ccg.vm.js" of="/nts.uk.com.web" />
 
-			<com:scriptfile path="gridlist-ko-ext.js" />
+			<com:scriptfile path="/view/cps/shr/layout-list-control-validation.js" />
+			<com:scriptfile path="/view/cps/shr/layout-list-control-ko-ext.js" />
 
 			<com:stylefile path="cps003.a.style.css" />
 			<com:scriptfile path="cps003.a.service.js" />
