--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/style.css
@@ -233,7 +233,10 @@
 	display: table-cell;
 	vertical-align: middle;
 }
-
+.ccg001-column {
+	height: 100%;
+	margin-right: 10px;
+}
 .ccg-tabpanel {
 	height: calc(100% - 150px);
 	background-color: #F2F2F2;
