--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/editor/timewithday-editor.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/component/editor/timewithday-editor.xhtml
@@ -40,7 +40,8 @@
 						</p>
 						<p>
 							<h3>Show Raw Time</h3>
-							<input id="test2" data-bind="ntsTimeWithDayEditor: {name: 'Time With Day 2', constraint:'TimeWithDayAttr', value: time2, enable: enable, readonly: readonly, required: true, option: {timeWithDay: true}}" />
+							<input id="test2" data-bind="ntsTimeWithDayEditor: {name: 'Time With Day 2', constraint:'TimeWithDayAttr', value: time2, enable: enable, readonly: readonly, required: true, option: {timeWithDay: withDayAttr}}" />
+							<div data-bind="ntsCheckBox: {checked: withDayAttr}">withDayAttr</div>
 							binding: <span data-bind="text: time2"></span>
 						</p>
 						<article class="cf">
