--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/ovdtocode/controls.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/ovdtocode/controls.xhtml
@@ -35,19 +35,20 @@
 				<div id="side-menu" class="cf"></div>
 				<div id="content" class="cf">
 
+					<h1>Control List</h1>
 
 					<table id="control-list" class="table" style="width: 1200px;">
 						<thead>
 							<tr>
 								<th rowspan="2" style="width: 170px;">Name in design (JPN)</th>
 								<th rowspan="2">Name of component</th>
-								<th colspan="2" style="width: 150px;">Property in design (JPN)</th>
+								<th colspan="2" style="width: 200px;">Property in design (JPN)</th>
 								<th rowspan="2" style="width: 250px;">Name of API, Option</th>
 								<th rowspan="2" style="width: 300px;">Remarks</th>
 							</tr>
 							<tr>
 								<th>name</th>
-								<th style="width: 50px;">value</th>
+								<th style="width: 100px;">value</th>
 							</tr>
 						</thead>
 						<tbody>
