kmk003 fix hide control tab 3

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/index.xhtml
@@ -338,7 +338,7 @@
 											</div>
 											<div tabindex="53" class="tab-a3">
 												<div class="tab-outline" data-bind="ntsKMK003A3: {enum: settingEnum, isDetailMode: isDetailMode,
-													useHalfDay: useHalfDay, mainModel: mainSettingModel, isLoading: isLoading, isClickSave: isClickSave }">
+													useHalfDay: useHalfDay, mainModel: mainSettingModel, isLoading: isLoading, isClickSave: isClickSave,isNewMode: isNewMode}">
 												</div>
 											</div>
 											<div tabindex="60" class="tab-a4">
