sidebar supports fixed-flex-layout

--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/frame/_contents.scss
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/sass/frame/_contents.scss
@@ -2,21 +2,22 @@
 	position: relative;
 	padding: 10px;
 	overflow-y: auto;
-	
-	&.fixed-flex-layout {
-		display: flex;
-		
-		> .fixed-flex-layout-left {
-			margin-right: 30px;
-			
-			/* specify width each screens */
-		}
-		
-		> .fixed-flex-layout-right {
-			flex: 1;
-		}
-	}
 }
 #master-wrapper {
 	height: 100vh;
+}
+
+	
+.fixed-flex-layout {
+	display: flex;
+	
+	> .fixed-flex-layout-left {
+		margin-right: 30px;
+		
+		/* specify width each screens */
+	}
+	
+	> .fixed-flex-layout-right {
+		flex: 1;
+	}
 }
