--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/functionwrap/sidebar/sidebar-sub.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/sample/functionwrap/sidebar/sidebar-sub.xhtml
@@ -58,21 +58,77 @@
 					<button>操作がなかったため</button>
 					<button>接続を切断しました</button>
 				</div>
-				<div class="contents-area">
-					<input data-bind="ntsTextEditor: {value: ko.observable('')}"></input>
-					<button id="set-error" data-bind="click: setError">Set Error</button>
-					<button id="clear-error" data-bind="click: clearError">Clear Error</button>
-					<table id="multi-list" data-bind="ntsGridList: {
-							height: 350,
-							options: items,
-							optionsValue: 'code',
-							columns: columns,
-							multiple: true,
-							value: currentCodeList
-						}"></table>
-					<hr />
-					<input data-bind="ntsTextEditor: {value: ko.observable(''), name: 'B', required: true}" />
-					<input data-bind="ntsTextEditor: {value: ko.observable(''), name: 'C', required: true}" />
+				<div class="contents-area fixed-flex-layout">
+					<div class="fixed-flex-layout-left">
+						<input data-bind="ntsTextEditor: {value: ko.observable('')}"></input>
+						<button id="set-error" data-bind="click: setError">Set Error</button>
+						<button id="clear-error" data-bind="click: clearError">Clear Error</button>
+						<table id="multi-list" data-bind="ntsGridList: {
+								height: 350,
+								options: items,
+								optionsValue: 'code',
+								columns: columns,
+								multiple: true,
+								value: currentCodeList
+							}"></table>
+					</div>
+					<div class="fixed-flex-layout-right">
+						<input data-bind="ntsTextEditor: {value: ko.observable(''), name: 'B', required: true}" />
+						<input data-bind="ntsTextEditor: {value: ko.observable(''), name: 'C', required: true}" />
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+						a<br/>
+					</div>
                </div>
 			</div>
 			<div id="tabpanel-3" role="tabpanel">
