--- a/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
+++ b/nts.uk/uk.base/base.web/nts.uk.com.js.web/src/main/webapp/lib/nittsu/ui/style/stylesheets/base.css
@@ -4664,23 +4664,24 @@ div .ex-area-line.x-stay {
   padding: 10px;
   overflow-y: auto;
 }
+
 /* line 6, ../sass/frame/_contents.scss */
-#contents-area.fixed-flex-layout {
+#master-wrapper {
+  height: 100vh;
+}
+
+/* line 11, ../sass/frame/_contents.scss */
+.fixed-flex-layout {
   display: flex;
 }
-/* line 9, ../sass/frame/_contents.scss */
-#contents-area.fixed-flex-layout > .fixed-flex-layout-left {
+/* line 14, ../sass/frame/_contents.scss */
+.fixed-flex-layout > .fixed-flex-layout-left {
   margin-right: 30px;
   /* specify width each screens */
 }
-/* line 15, ../sass/frame/_contents.scss */
-#contents-area.fixed-flex-layout > .fixed-flex-layout-right {
-  flex: 1;
-}
-
 /* line 20, ../sass/frame/_contents.scss */
-#master-wrapper {
-  height: 100vh;
+.fixed-flex-layout > .fixed-flex-layout-right {
+  flex: 1;
 }
 
 /* line 7, ../sass/frame/_sidebar.scss */
