--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/014/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cas/014/a/index.xhtml
@@ -21,7 +21,7 @@
 		<ui:define name="sidebar">
 			<ul class="navigator">
 				<li><a href="#tabpanel-1" role="tab-navigator" class="active" data-bind="click: nts.uk.ui.errors.clearAll()">#{i18n.getText('CAS014_2')}</a></li>
-				<li><a href="#tabpanel-2" role="tab-navigator" data-bind="click: nts.uk.ui.errors.clearAll()">#{i18n.getText('CAS014_3')}</a></li>
+				<li><a href="#tabpanel-2" role="tab-navigator" data-bind="click: loadTab2">#{i18n.getText('CAS014_3')}</a></li>
 			</ul>
 		</ui:define>
 
