--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/style.css
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/style.css
@@ -147,7 +147,9 @@
 .ccg001-control-group {
 	margin-left: 5px;
 }
-
+.ccg001-label {
+	width: 85px;
+}
 .ccg-tabpanel #tab-1 {
 	height: calc(100% - 70px);
 	background-color: white;
