--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/a/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cps/001/a/index.xhtml
@@ -87,14 +87,14 @@
 									title: text('CPS001_23'), 
 									content: '.layouttab', 
 									enable: ko.observable(true), 
-									visible: ko.observable(true)
+									visible: hasLayout
 								},
 								{
 									id: 'category', 
 									title: text('CPS001_24'), 
 									content: '.categorytab', 
 									enable: ko.observable(true), 
-									visible: ko.observable(true)
+									visible: hasLayout
 								}], 
 							active: tab
 							}">
