--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/009/share/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/009/share/index.xhtml
@@ -233,7 +233,7 @@
 			</div>
 		</div>
 		<!--定型理由 -->
-		<div class="valign-top control-group overlay-reason" data-bind="if: displayTypicalReason">
+		<div class="valign-top control-group overlay-reason" data-bind="if: displayTypicalReason()">
 			<div class="lblTitleKAF009" data-bind="ntsFormLabel:{}">#{i18n.getText('KAF009_25')}</div>
 			<div id="combo-box"
 				data-bind="ntsComboBox: {
@@ -247,12 +247,17 @@
 			</div>
 		</div>
 		<!-- 申請理由（ラベル) -->
-		<div class="valign-top control-group" data-bind="if: displayReason">
+		<div class="valign-top control-group" data-bind="if: (isNewScreen() &amp;&amp; displayReason()) &#124;&#124; !isNewScreen()">
 			<div class="lblTitleKAF009"
 				data-bind="ntsFormLabel: {}">#{i18n.getText('KAF009_27')}</div>
 			<div id="inpReason">
 				<textarea id="inpReasonTextarea"
-					data-bind="ntsMultilineEditor: {value: multilContent,option: multiOption, required : requiredReason(), name: '#[KAF009_29]'}" />
+					data-bind="ntsMultilineEditor: { value: multilContent,
+													option: multiOption, 
+													required : requiredReason(), 
+													name: '#[KAF009_29]',
+													enable: displayReason,
+													}" />
 			</div>
 		</div>
 	</div>
