--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/ccg/share/index.xhtml
@@ -5,8 +5,8 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html">
 	<div id="component-ccg001" class="cf height-maximum">
 		<div class="pull-left ccg001-content">
-			<div id="ccg001-header" class="table">
-				<div class="cell">
+			<div id="ccg001-header" class="ccg001-table">
+				<div class="ccg001-cell">
 					<com:ko tag="if" bind="showBaseDate">
 						<div class="control-group ccg001-control-group">
 							<div class="ccg001-label" data-bind="ntsFormLabel: {required: true}">#{i18n.getText('CCG001_27')}</div>
@@ -72,7 +72,7 @@
 						</div>
 					</com:ko>
 				</div>
-				<div class="cell valign-bottom">
+				<div class="ccg001-cell bot">
 					<button tabindex="5" id="ccg001-btn-apply-search-condition"
 						class="proceed caret-bottom" data-bind="click: applyDataSearch">#{i18n.getText('CCG001_2')}</button>
 				</div>
@@ -255,15 +255,15 @@
 									</div>
 								</com:ko>
 							</div>
-							<div class="pull-left height-maximum margin-left-10 table">
-								<div class="ccg001-tbl-cell-middle">
+							<div class="pull-left height-maximum margin-left-10 ccg001-table">
+								<div class="ccg001-cell mid">
 									<div tabindex="17" class="ccg-btn-vertical height-maximum" data-bind="click: advancedSearchEmployee">
-										<div class="ccg001-tbl-cell-middle">
+										<div class="ccg001-cell mid">
 											<div class="ccg-lbl-vertical ccg-lbl-extract-emp">#{i18n.getText('CCG001_25')}</div>
 										</div>
 									</div>
 								</div>
-								<div class="ccg001-tbl-cell-middle">
+								<div class="ccg001-cell mid">
 									<span class="ccg-caret caret-right"></span>
 								</div>
 							</div>
@@ -272,16 +272,16 @@
 								<div class="pull-left height-maximum margin-left-10">
 									<div tabindex="18" id="employeeinfo"></div>
 								</div>
-								<div class="pull-left height-maximum margin-left-10 table">
-									<div class="ccg001-tbl-cell-middle">
+								<div class="pull-left height-maximum margin-left-10 ccg001-table">
+									<div class="ccg001-cell mid">
 										<div tabindex="19" class="ccg-btn-vertical height-maximum" data-bind="click: extractSelectedEmployees">
-											<div class="ccg001-tbl-cell-middle">
+											<div class="ccg001-cell mid">
 												<i class="icon icon-01-searchmode"></i>
 												<div class="ccg-lbl-vertical ccg-lbl-extract-emp">#{i18n.getText('CCG001_26')}</div>
 											</div>
 										</div>
 									</div>
-									<div class="ccg001-tbl-cell-middle">
+									<div class="ccg001-cell mid">
 										<span class="ccg-caret caret-right"></span>
 									</div>
 								</div>
@@ -295,15 +295,15 @@
 		</div>
 	</div>
 	<div id="hor-scroll-button-hide" class="height-maximum">
-		<div class="ccg001-tbl-cell-middle">
+		<div class="ccg001-cell mid">
 			<div id="ccg001-btn-search-drawer" class="ccg-btn-vertical height-maximum" data-bind="click: showComponent">
-				<div class="ccg001-tbl-cell-middle">
+				<div class="ccg001-cell mid">
 				<i class="icon icon-01-searchmode"></i>
 				<div class="ccg-lbl-vertical ccg-lbl-search-drawer">#{i18n.getText('CCG001_21')}</div>
 				</div>
 			</div>
 		</div>
-		<div class="ccg001-tbl-cell-middle">
+		<div class="ccg001-cell mid">
 			<span class="ccg-caret caret-right"></span>
 		</div>
 	</div>
